[gd_scene load_steps=4 format=3 uid="uid://c0x30rdxs6nll"]

[ext_resource type="PackedScene" uid="uid://cc4gm4iiyhk8i" path="res://scenes/card/card_scene.tscn" id="1_02wba"]
[ext_resource type="Script" path="res://scenes/card/card_scene.gd" id="1_bytpx"]
[ext_resource type="Script" path="res://scenes/card_ui/card_ui.gd" id="3_vchu3"]

[node name="CardScene" type="Node"]
script = ExtResource("1_bytpx")

[node name="CardUI" parent="." instance=ExtResource("1_02wba")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 25.0
offset_bottom = 30.0
grow_horizontal = 1
grow_vertical = 1
script = ExtResource("3_vchu3")

[node name="CardVisuals" type="Control" parent="."]
custom_minimum_size = Vector2(25, 30)
layout_mode = 3
anchors_preset = 0
offset_right = 25.0
offset_bottom = 30.0

[node name="CardHandler" type="Node" parent="."]
