[gd_scene load_steps=12 format=3 uid="uid://csk6m6hxi8rf5"]

[ext_resource type="Theme" uid="uid://bydp08q78nl2i" path="res://main_theme.tres" id="1_1m4nd"]
[ext_resource type="StyleBox" uid="uid://dvw8io7teuu2a" path="res://card_visuals.tres" id="2_adkgq"]
[ext_resource type="Script" path="res://scenes/card_ui/card_ui.gd" id="2_py45d"]
[ext_resource type="Texture2D" uid="uid://c7pb6k2ir7o2f" path="res://assets/pen_jab2.png" id="3_btgoc"]
[ext_resource type="Texture2D" uid="uid://cs0uqe1j5t710" path="res://assets/pen_throw.png" id="4_u0ixf"]
[ext_resource type="Texture2D" uid="uid://c44dvjx273s32" path="res://assets/pixil-frame-0.png" id="4_yo0io"]
[ext_resource type="Texture2D" uid="uid://bp8sm1oa8ge0j" path="res://assets/hard_cover.png" id="5_8xd6m"]
[ext_resource type="StyleBox" uid="uid://huto8dpnstu6" path="res://scenes/card_ui/cost_icon.tres" id="5_45mbm"]

[sub_resource type="LabelSettings" id="LabelSettings_xp382"]
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_4br4t"]
line_spacing = 0.0
font_size = 48

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tgk8j"]
size = Vector2(25, 30)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(25, 30)
layout_mode = 3
anchors_preset = 0
mouse_filter = 2
theme = ExtResource("1_1m4nd")
script = ExtResource("2_py45d")

[node name="CardBackground" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(25, 30)
layout_mode = 0
offset_right = 25.0
offset_bottom = 30.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_adkgq")

[node name="ArtContainer" type="Control" parent="CardBackground"]
custom_minimum_size = Vector2(23, 13.5)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 2

[node name="AttackArtContainer" type="Control" parent="CardBackground/ArtContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ArtPolygon" type="Polygon2D" parent="CardBackground/ArtContainer/AttackArtContainer"]
clip_children = 1
position = Vector2(5.96046e-08, -5.96046e-08)
texture_scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(23, 2, 23, 10, 11.5, 13.5, 0, 10, 0, 3, 1, 2, 2, 2, 2, 1, 3, 5.96046e-08, 22, 5.96046e-08, 22, 1)

[node name="ArtTexture" type="TextureRect" parent="CardBackground/ArtContainer/AttackArtContainer/ArtPolygon"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 23.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_u0ixf")
expand_mode = 3

[node name="ArtBorder" type="Line2D" parent="CardBackground/ArtContainer/AttackArtContainer"]
position = Vector2(0, 2)
points = PackedVector2Array(-0.5, 8, 11.5, 12, 23.5, 8)
width = 1.0
default_color = Color(0.192157, 0.529412, 0.635294, 1)

[node name="SpellArtContainer" type="Control" parent="CardBackground/ArtContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ArtPolygon" type="Polygon2D" parent="CardBackground/ArtContainer/SpellArtContainer"]
clip_children = 1
position = Vector2(5.96046e-08, -5.96046e-08)
texture_scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(23, 2, 23, 11, 20.5, 13.5, 17.5, 12, 14.5, 14, 11.5, 12, 8.5, 14, 5.5, 12, 2.5, 13.5, 0, 11, 0, 3, 1, 2, 2, 2, 2, 1, 3, 5.96046e-08, 22, 5.96046e-08, 22, 1)

[node name="ArtTexture" type="TextureRect" parent="CardBackground/ArtContainer/SpellArtContainer/ArtPolygon"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 23.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_8xd6m")
expand_mode = 3

[node name="ArtBorder" type="Line2D" parent="CardBackground/ArtContainer/SpellArtContainer"]
position = Vector2(0, 3)
points = PackedVector2Array(-0.5, 8, 2.5, 11, 5.5, 8.5, 8.5, 11, 11.5, 8.5, 14.5, 11, 17.5, 8.5, 20.5, 11, 23.5, 8)
width = 1.0
default_color = Color(0.192157, 0.529412, 0.635294, 1)

[node name="AuraArtContainer" type="Control" parent="CardBackground/ArtContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ArtPolygon" type="Polygon2D" parent="CardBackground/ArtContainer/AuraArtContainer"]
clip_children = 1
position = Vector2(5.96046e-08, -5.96046e-08)
texture_scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(23, 2, 23, 10, 23, 14, 11.5, 14, 0, 14, 0, 10, 0, 3, 1, 2, 2, 2, 2, 1, 3, 5.96046e-08, 22, 5.96046e-08, 22, 1)

[node name="ArtTexture" type="TextureRect" parent="CardBackground/ArtContainer/AuraArtContainer/ArtPolygon"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 23.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_btgoc")
expand_mode = 3

[node name="ArtBorder" type="Line2D" parent="CardBackground/ArtContainer/AuraArtContainer"]
position = Vector2(0, 2)
points = PackedVector2Array(-0.5, 8, -0.5, 12, 11.5, 12, 23.5, 12, 23.5, 8)
width = 1.0
default_color = Color(0.192157, 0.529412, 0.635294, 1)

[node name="CharacterArtContainer" type="Control" parent="CardBackground/ArtContainer"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ArtPolygon" type="Polygon2D" parent="CardBackground/ArtContainer/CharacterArtContainer"]
clip_children = 1
position = Vector2(5.96046e-08, -5.96046e-08)
texture_scale = Vector2(0.5, 0.5)
polygon = PackedVector2Array(23, 2, 23, 10, 17, 14, 11.5, 14, 5, 14, 0, 10, 0, 3, 1, 2, 2, 2, 2, 1, 3, 5.96046e-08, 22, 5.96046e-08, 22, 1)

[node name="ArtTexture" type="TextureRect" parent="CardBackground/ArtContainer/CharacterArtContainer/ArtPolygon"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 23.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_btgoc")
expand_mode = 3

[node name="ArtBorder" type="Line2D" parent="CardBackground/ArtContainer/CharacterArtContainer"]
position = Vector2(0, 2)
points = PackedVector2Array(-0.5, 8, 5.5, 12, 11.5, 12, 17.5, 12, 23.5, 8)
width = 1.0
default_color = Color(0.192157, 0.529412, 0.635294, 1)

[node name="TextContainer" type="Control" parent="CardBackground"]
custom_minimum_size = Vector2(23, 14)
layout_mode = 2
size_flags_vertical = 8
mouse_filter = 2

[node name="NameLabel" type="Label" parent="CardBackground/TextContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 437.0
offset_bottom = 97.0
grow_horizontal = 2
scale = Vector2(0.05, 0.05)
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Pen Throw"
label_settings = SubResource("LabelSettings_xp382")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="RichTextLabel" parent="CardBackground/TextContainer"]
custom_minimum_size = Vector2(420, 180)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -9.0
offset_right = 398.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.05, 0.05)
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "Deal 6 damage to an enemy."
scroll_active = false

[node name="CostIcon" type="Panel" parent="."]
custom_minimum_size = Vector2(5, 5)
layout_mode = 1
offset_left = -2.0
offset_top = -2.0
offset_right = 4.0
offset_bottom = 4.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("5_45mbm")

[node name="CostLabel" type="Label" parent="CostIcon"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -3.2
offset_right = 56.0
offset_bottom = 55.8
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
mouse_filter = 1
text = "2"
label_settings = SubResource("LabelSettings_4br4t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TypeDiamond" type="Polygon2D" parent="."]
position = Vector2(-50.5, 12)
color = Color(1, 0, 0, 1)
polygon = PackedVector2Array(75, -15, 73, -13, 73, -10, 75, -8, 77, -10, 77, -13)

[node name="TypeIconContainer" type="VBoxContainer" parent="TypeDiamond"]
custom_minimum_size = Vector2(4, 7)
offset_left = 73.0
offset_top = -15.0
offset_right = 77.0
offset_bottom = -8.0
mouse_filter = 2
alignment = 1

[node name="TypeIcon" type="TextureRect" parent="TypeDiamond/TypeIconContainer"]
visible = false
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4_yo0io")
expand_mode = 4
stretch_mode = 5

[node name="CardArea" type="Area2D" parent="."]
collision_mask = 2
monitoring = false

[node name="CollisionArea" type="CollisionShape2D" parent="CardArea"]
position = Vector2(12.5, 15)
shape = SubResource("RectangleShape2D_tgk8j")
